modulo-09/loadbalancer-atualizado.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-service
spec:
  selector:
    app: giropops-senhas
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
