modulo-09/ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /giropops-senhas        
        backend:
          service:
            name: giropops-senhas
            port:
              number: 5000
