modulo-09/ingress-load-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
  - host: localhost
    http:
      paths:
      - path: /giropops-senhas
        pathType: Prefix        
        backend:
          service:
            name: giropops-senhas
            port:
              number: 5000
