modulo-09/ingress-load-static-content.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas-static-content
spec:
  ingressClassName: "nginx"
  rules:
  - host: localhost
    http:
      paths:
      - path: /static
        pathType: Prefix        
        backend:
          service:
            name: giropops-senhas
            port:
              number: 5000
